--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <application android:label="@string/app_name">
+        <service android:name=".BackgroundService"/>
         <activity android:name=".GattServerActivity">
 
             <!-- Launch as default from Android Studio -->
