--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation project(':LocalRepo')
     // Kotlin stdlib
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //
+    implementation "com.android.support:appcompat-v7:27.1.1"
     // Required -- JUnit 4 framework
     testImplementation "junit:junit:4.13.2"
 }
