--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name"
+        android:persistent="true">
         <service android:name=".BackgroundService"/>
         <activity android:name=".GattServerActivity">
 
